--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,12 @@
     <string name="projectDetailAddCart">Add to cart</string>
     <string name="mainScreenSearch">Search</string>
     <string name="mainScreenLocation">Location</string>
-    <string name="mainScreenPleaseL">Please l...</string>
+    <string name="mainScreenPleaseL">Please l…</string>
     <string name="myCartScreenMyCart">My Cart</string>
     <string name="myCartScreenPrice">Price:</string>
+    <string name="toastAddProduct">Product added to cart!</string>
+    <string name="confirmCart">Confirm Cart</string>
+    <string name="total">Total</string>
+    <string name="shippingFree">Shipping Free</string>
+
 </resources>
