--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="snackbar_discard_message">Do you want to discard "%1$s"?</string>
     <string name="snackbar_delete_cart_item_message">Do you want to delete "%1$s"?</string>
     <string name="snackbar_yes">YES</string>
+    <string name="favorites_header">My Favorite</string>
 
 
 </resources>
