--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="snackbar_delete_cart_item_message">Do you want to delete "%1$s"?</string>
     <string name="snackbar_yes">YES</string>
     <string name="favorites_header">My Favorite</string>
+    <string name="favorite_empty">Favorites are empty</string>
+    <string name="cart_empty">Cart is empty</string>
 
 
 </resources>
